# landslide-app

./: .env.example  .gitignore  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: AUDIT.md
pipelines/: README.md  build_tiles.py  exporter.py  loader.py  spatial.py
pipelines/tests/: test_build_tiles.py  test_exporter.py  test_loader.py  test_spatial.py
public/data/: cell_grid_j2.json  cell_grid_j3.json  comuni_fvg.geojson  model_j2.json  model_j3.json  poi_fvg.geojson  zones_j2.json  zones_j3.json
public/flood/: historical_floods.geojson  pred_previews_manifest.json
public/tiles/: iffi.pmtiles
scripts/: build-cell-grid.mjs  build-comuni.mjs  build-icons.mjs  build-poi.mjs  build-roads.mjs
src/: main.tsx  vite-env.d.ts
src/app/: App.module.css  App.tsx  integration.test.tsx  store.test.ts  store.ts  types.ts
src/drawer/: AnalyticsPanel.module.css  AnalyticsPanel.tsx  Drawer.module.css  Drawer.tsx  Group.module.css  Group.tsx  ModelPanel.module.css  ModelPanel.tsx  MonitoringPanel.module.css  MonitoringPanel.tsx  ViewPanel.module.css  ViewPanel.test.tsx  ViewPanel.tsx
src/lib/: bundle.ts  export.ts  schemas.test.ts  schemas.ts  upload.ts
src/map-overlays/: BasemapPanel.tsx  ColorButton.module.css  ColorButton.tsx  ComuneFilterPanel.module.css  ComuneFilterPanel.tsx  DrawingPanel.module.css  DrawingPanel.tsx  ExportPanel.module.css  ExportPanel.tsx  LayersPanel.module.css  Legend.tsx  (+12 more)
(+58 files in other folders)
