[project]
name = "landslide-app-pipelines"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "geopandas>=0.14",
  "pandas>=2.1",
  "pyarrow>=14",
  "shapely>=2.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.7"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
